# Projekt2Sdizo

./: .gitignore  CMakeLists.txt  README.md  SDIZO2.docx  main.cpp  sdizo2excel.xlsx
Algorithms/: Dijkstra.cpp  Dijkstra.h  FordBellman.cpp  FordBellman.h  Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h
GraphsImpl/: BinaryHeap.h  Edge.h  List.cpp  List.h  Matrix.cpp  Matrix.h  Utility.h
Menu/: MinimumSpanningMenu.cpp  MinimumSpanningMenu.h  ShortestPathMenu.cpp  ShortestPathMenu.h
Tests/: MSTTest.cpp  MSTTest.h  ShortestPathTest.cpp  ShortestPathTest.h  TimeCounter.cpp  TimeCounter.h
